--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,7 @@
 </span><span class="empty">
 </span></span></span><span class="mcui_arrow"></span><span class="mcui_output">
 <span class="colorful_items golem" title="傀儡农民">
-</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td><td></td></tr>
+</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td></tr>
 
 <tr><th>傀儡矿工</th><td>傀儡+<a href="#break_hand">破坏之手</a></td>
 <td><span class="mcui"><span><span class="mcui_row"><span class="colorful_items golem" title="傀儡">
@@ -1592,7 +1592,7 @@
 </span><span class="empty">
 </span></span></span><span class="mcui_arrow"></span><span class="mcui_output">
 <span class="colorful_items golem" title="傀儡矿工">
-</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td><td></td></tr>
+</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td></tr>
 
 <tr><th>傀儡渔夫</th><td>傀儡+<a href="#smart_hand">灵巧之手</a></td>
 <td><span class="mcui"><span><span class="mcui_row"><span class="colorful_items golem" title="傀儡">
@@ -1606,7 +1606,7 @@
 </span><span class="empty">
 </span></span></span><span class="mcui_arrow"></span><span class="mcui_output">
 <span class="colorful_items golem" title="傀儡渔夫">
-</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td><td></td></tr>
+</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td></tr>
 
 <tr><th>傀儡战士</th><td>傀儡+<a href="#angry_hand">愤怒之手</a></td>
 <td><span class="mcui"><span><span class="mcui_row"><span class="colorful_items golem" title="傀儡">
@@ -1620,7 +1620,7 @@
 </span><span class="empty">
 </span></span></span><span class="mcui_arrow"></span><span class="mcui_output">
 <span class="colorful_items golem" title="傀儡战士">
-</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td><td></td></tr>
+</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td></tr>
 
 <tr><th>傀儡牧民</th><td>傀儡+<a href="#toughen_hand">历练之手</a></td>
 <td><span class="mcui"><span><span class="mcui_row"><span class="colorful_items golem" title="傀儡">
@@ -1634,7 +1634,7 @@
 </span><span class="empty">
 </span></span></span><span class="mcui_arrow"></span><span class="mcui_output">
 <span class="colorful_items golem" title="傀儡牧民">
-</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td><td></td></tr>
+</span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span><span class="mcui_icons"><span class="mcui_shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span></span></span></td></tr>
 
 </tbody></table>
 
