修复了属性附加比例错误 修复了副手持有工具的错误

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<li><a href="#utilitypp">便捷</a></li>
 	<li><a href="#vanilla_recipes">原版</a></li>
 	<li><a href="#trade">交易</a></li>
-	<li><a href="#island">空岛</a></li>
+	<li><a href="#block_sky_domain">空岛</a></li>
 	<li><a href="#advancements">进度</a></li>
 	<li><a href="#config">配置</a></li>	
 	<li><a href="#changlog">日志</a></li>
@@ -87,7 +87,7 @@
 如果你想要对本模组进行支持，可进入<a href="https://afdian.net/@ruhuasiyu">爱发电页面</a>对我们进行赞助。您的赞助对我们至关重要，非常感谢您的支持！</p>
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 18w32a</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d17.zip">craftingpp-1.8-m08d17</a> | <a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d17.zip">备用链接</a></li></td></tr>
+<tr><td>Minecraft Java版 18w32a</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d20.zip">craftingpp-1.8-m08d20</a> | <a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d20.zip">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.12</td><td>
 <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td></tr>
 <tr><td>Minecraft Java版 1.12 pre</td><td>
@@ -512,7 +512,7 @@
 <h2 id="machines">机器和插件</h2>
 <h3 id="crafting_machine">合成器 (Crafting Machine)</h3>
 <p>合成器可使用或者不使用工具进行开采，但用斧是最快的。</p>
-<p>放置后打开，将材料放入左侧3×3的合成方格，若右侧为空，则会自动合成出产物。关闭后，界面里的东西会保留，可以使用漏斗输入。</p>
+<p>主手持有右键放置。放置后右键打开并将材料放入左侧3×3的合成方格，若右侧为空，则会自动合成出产物。关闭后，界面里的东西会保留，可以使用漏斗输入。</p>
 <p class="small">强行放入背景的物品会消失。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>合成器</th>
@@ -533,7 +533,7 @@
 
 <h3 id="all_in_one_machine">多功能一体机 (All-in-one Machine)</h3>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><th>合成器</th>
+<tr><th>多功能一体机</th>
 <td><a href="#enchanted_iron">附魔铁锭</a>+<a href="#enchanted_gold">附魔金锭</a>+熔炉+箱子+<a href="#soul_of_dirt">泥土之魂</a></td><td><span class="mcui"><span>
 <span class="mcui_row"><span class="iron_ingot" title="附魔铁锭"><span class="enchant">*</span>
 </span><span class="furnace" title="熔炉">
@@ -548,8 +548,8 @@
 <span class="colorful_items all_in_one_machine" title="多功能一体机">
 </span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span></span></td></tr>
 </tbody></table>
-<p>多功能一体机可使用或者不使用工具进行开采，但用斧是最快的。关闭后，界面里的东西会保留，可以使用漏斗输入。</p>
-<p>上方若有固体方块阻挡将无法打开。默认情形下，多功能一体机只能使用常压常温模式。对机器使用相应的插件后即可升级，解锁相应模式，包括：<a href="#low_temperature_plugin">低温插件</a>、<a href="#low_pressure_plugin">低压插件</a>、<a href="#high_temperature_plugin">高温插件</a>、<a href="#high_pressure_plugin">高压插件</a>。</p>
+<p>主手持有右键放置。多功能一体机可使用或者不使用工具进行开采，但用斧是最快的。关闭后，界面里的东西会保留，可以使用漏斗输入。</p>
+<p>上方若有固体方块阻挡将无法打开。默认情形下，多功能一体机只能使用常压常温模式。主手持有相应的插件右键即可升级，解锁相应模式，包括：<a href="#low_temperature_plugin">低温插件</a>、<a href="#low_pressure_plugin">低压插件</a>、<a href="#high_temperature_plugin">高温插件</a>、<a href="#high_pressure_plugin">高压插件</a>。</p>
 <p>多功能一体机包括上方两个输入槽，下方两个输出槽。右上方为附魔之瓶槽位和经验槽。左侧三个槽位控制压力、温度和输出方向，按Q或Shift+左键切换模式。若输出方向有箱子/潜影箱/陷阱箱则会自动输出到箱子内。多功能一体机可以存储至多8点经验，当经验不超过4点会自动消耗附魔之瓶来装填，将<a href="#experience_bottle">附魔之瓶</a>放入右上方槽位即可。</p>
 <p class="small">强行放入背景的物品会消失。</p>
 
@@ -719,7 +719,7 @@
 <span class="colorful_items trade_machine" title="交易机">
 </span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span></span></td></tr>
 </tbody></table>
-<p>交易机可使用或者不使用工具进行开采，但用斧是最快的。关闭后，界面里的东西会保留，可以使用漏斗输入。</p>
+<p>主手持有右键放置。交易机可使用或者不使用工具进行开采，但用斧是最快的。关闭后，界面里的东西会保留，可以使用漏斗输入。</p>
 <p>
 上方若有固体方块阻挡将无法打开。交易机包括左侧1个输入槽，右侧2个输出槽。左侧槽位控制输出方向，按Q或Shift+左键切换模式，若输出方向有箱子/潜影箱/陷阱箱则会自动输出到箱子内。</p>
 <table><thead><tr><th>输入槽</th><th colspan="2">输出</th></tr></thead><tbody>
@@ -754,7 +754,7 @@
 <span class="colorful_items recipe_shower" title="配方显示器">
 </span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span></span></td></tr>
 </tbody></table>
-<p>配方显示器可使用或者不使用工具进行开采，但用斧是最快的。</p>
+<p>主手持有右键放置。配方显示器可使用或者不使用工具进行开采，但用斧是最快的。</p>
 <p>
 上方若有固体方块阻挡将无法打开。按Q或Shift+左键切换物品，切换左侧物品将会显示其配方，切换右侧物品将会循环显示所有配方。</p>
 <p class="small">强行放入背景的物品会消失。</p>
@@ -779,7 +779,7 @@
 <p>空白插件可用于合成<a href="#low_temperature_plugin">低温插件</a>、<a href="#low_pressure_plugin">低压插件</a>、<a href="#high_temperature_plugin">高温插件</a>、<a href="#high_pressure_plugin">高压插件</a>、<a href="#cobblestone_plugin">圆石插件</a>、<a href="#stone_plugin">石头插件</a>、<a href="#obsidian_plugin">黑曜石插件</a>。</p>
 
 <h3 id="low_temperature_plugin">低温插件 (Low Temperature Plugin)</h3>
-<p>手持右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
+<p>主手持有右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>低温插件</th>
 <td><a href="#experience_bottle">附魔之瓶</a>+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+<a href="#empty_plugin">空白插件</a>+雪块+<a href="#heart_of_ocean">海洋之心</a></td><td><span class="mcui"><span>
@@ -798,7 +798,7 @@
 </tbody></table>
 
 <h3 id="low_pressure_plugin">低压插件 (Low Pressure Plugin)</h3>
-<p>手持右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
+<p>主手持有右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>低压插件</th>
 <td><a href="#experience_bottle">附魔之瓶</a>+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+<a href="#empty_plugin">空白插件</a>+玻璃+<a href="#wing_of_sky">飞翔之翼</a></td><td><span class="mcui"><span>
@@ -817,7 +817,7 @@
 </tbody></table>
 
 <h3 id="high_temperature_plugin">高温插件 (High Temperature Plugin)</h3>
-<p>手持右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
+<p>主手持有右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>高温插件</th>
 <td><a href="#experience_bottle">附魔之瓶</a>+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+<a href="#empty_plugin">空白插件</a>+熔岩桶+<a href="#nova_of_fire">火焰之星</a></td><td><span class="mcui"><span>
@@ -836,7 +836,7 @@
 </tbody></table>
 
 <h3 id="high_pressure_plugin">高压插件 (High Pressure Plugin)</h3>
-<p>手持右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
+<p>主手持有右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>高压插件</th>
 <td><a href="#experience_bottle">附魔之瓶</a>+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+<a href="#empty_plugin">空白插件</a>+活塞+<a href="#limb_of_ridge">山脉之肢</a></td><td><span class="mcui"><span>
@@ -857,7 +857,7 @@
 
 
 <h3 id="cobblestone_plugin">圆石插件 (Cobblestone Plugin)</h3>
-<p>圆石插件用于<a href="#all_in_one_machine">多功能一体机</a>常压模式下制造圆石。</p>
+<p>圆石插件用于<a href="#all_in_one_machine">多功能一体机</a>常压模式下制造圆石。主手持有右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
 <table>
 <thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>圆石插件</th>
@@ -877,7 +877,7 @@
 </tbody></table>
 
 <h3 id="stone_plugin">石头插件 (Stone Plugin)</h3>
-<p>石头插件用于<a href="#all_in_one_machine">多功能一体机</a>常压模式下制造石头。</p>
+<p>石头插件用于<a href="#all_in_one_machine">多功能一体机</a>常压模式下制造石头。主手持有右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
 <table>
 <thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>石头插件</th>
@@ -897,7 +897,7 @@
 </tbody></table>
 
 <h3 id="obsidian_plugin">黑曜石插件 (Obsidian Plugin)</h3>
-<p>黑曜石插件用于<a href="#all_in_one_machine">多功能一体机</a>常压模式下制造黑曜石。</p>
+<p>黑曜石插件用于<a href="#all_in_one_machine">多功能一体机</a>常压模式下制造黑曜石。主手持有右击<a href="#all_in_one_machine">多功能一体机</a>即可安装。</p>
 <table>
 <thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>黑曜石插件</th>
@@ -1370,7 +1370,7 @@
 <!------------------------------------------------------------------------------------------------->
 <h2 id="tools">工具</h2>
 <h3 id="blue_force_of_sky">蓝色天之力 (Blue Force of Sky)</h3>
-<p>右键消耗玩家10点经验依次切换为晴天/下雨天/雷雨天。</p>
+<p>主手持有右键消耗玩家10点经验依次切换为晴天/下雨天/雷雨天。</p>
 <p class="small">每次使用切换为上一次使用后的下一个状态，这与当前天气无关。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>蓝色天之力</th><td>青金石+煤炭+<a href="#wing_of_sky">天空之翼</a></td><td><span class="mcui"><span>
@@ -1390,7 +1390,7 @@
 
 
 <h3 id="green_force_of_water">绿色水之力 (Green Force of Water)</h3>
-<p>右键放置一格水，在下界亦可正常使用。<span style="font-style:itapc;">Surrare Lilpana!</span></p>
+<p>主手持有右键放置一格水，在下界亦可正常使用。<span style="font-style:itapc;">Surrare Lilpana!</span></p>
 <p>绿色水之力可以在<a href="#all_in_one_machine">多功能一体机</a>低温高压下将水瓶变为冰，低温低压下将水瓶变为雪块。</p>
 <p class="small">所指的方块不可被火把、栅栏等不完整方块阻挡，下同。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
@@ -1411,7 +1411,7 @@
 
 
 <h3 id="cyan_force_of_mountain">青色山之力 (Cyan Force of Mountain)</h3>
-<p>右键消耗玩家25点经验，将5×5区域内高于玩家的石头、泥土、草方块清除，低于玩家的空气填充为泥土。</p>
+<p>主手持有右键消耗玩家25点经验，将5×5区域内高于玩家的石头、泥土、草方块清除，低于玩家的空气填充为泥土。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>青色山之力</th><td>青色染料+铁锭+<a href="#limb_of_ridge">山脉之肢</a></td><td><span class="mcui"><span>
 <span class="mcui_row"><span class="cyan_dye" title="青色染料">
@@ -1430,7 +1430,7 @@
 
 
 <h3 id="orange_force_of_dirt">橙色土之力 (Orange Force of Dirt)</h3>
-<p>右键破坏土质方块。<span style="font-style:itapc;">Defla Forces!</span></p>
+<p>主手持有右键破坏土质方块。<span style="font-style:itapc;">Defla Forces!</span></p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>橙色土之力</th><td>橙色染料+青金石+<a href="#soul_of_dirt">泥土之魂</a></td><td><span class="mcui"><span>
 <span class="mcui_row"><span class="orange_dye" title="橙色染料">
@@ -1449,7 +1449,7 @@
 
 
 <h3 id="yellow_force_of_earth">黄色地之力 (Yellow Force of Earth)</h3>
-<p>右键消耗玩家25点经验并清除附近15×3×15区域中的水和岩浆。</p>
+<p>主手持有右键消耗玩家25点经验并清除附近15×3×15区域中的水和岩浆。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>黄色地之力</th><td>蒲公英黄+金锭+<a href="#certification_of_earth">大地之证</a></td><td><span class="mcui"><span>
 <span class="mcui_row"><span class="dandelion_yellow" title="蒲公英黄">
@@ -1468,7 +1468,7 @@
 
 
 <h3 id="red_force_of_fire">红色火之力 (Red Force of Fire)</h3>
-<p>右键烧炼方块成物品。<span style="font-style:itapc;">Fial Forces!</span></p>
+<p>主手持有右键烧炼方块成物品。<span style="font-style:itapc;">Fial Forces!</span></p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>红色火之力</th><td>玫瑰红+石英+<a href="#nova_of_fire">火焰之星</a></td><td><span class="mcui"><span>
 <span class="mcui_row"><span class="rose_red" title="玫瑰红">
@@ -1487,7 +1487,7 @@
 
 
 <h3 id="purple_force_of_pfe">紫色命之力 (Purple Force of Life)</h3>
-<p>右键转换地面的树苗、种子和花，转化比率为2:1。</p>
+<p>主手持有右键转换地面的树苗、种子和花，转化比率为2:1。</p>
 <p class="small">数量必须恰好为2。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>紫色命之力</th><td>紫色染料+钻石+<a href="#spirit_of_life">生命之灵</a></td><td><span class="mcui"><span>
@@ -1507,7 +1507,7 @@
 
 
 <h3 id="white_force_of_pghtning">白色电之力 (White Force of Lightning)</h3>
-<p>右键去除地面的物品附魔。</p>
+<p>主手持有右键去除地面的物品附魔。</p>
 <p class="small">亦可去除模组的各种物品的光泽。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>白色电之力</th><td>骨粉+绿宝石+<a href="#nether_star">下界之星</a></td><td><span class="mcui"><span>
@@ -1527,7 +1527,7 @@
 
 
 <h3 id="black_force_of_moon">黑色月之力 (Black Force of Moon)</h3>
-<p>右键消耗玩家40点经验并在前方铺设泥土道路。</p>
+<p>主手持有右键消耗玩家40点经验并在前方铺设泥土道路。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>黑色月之力</th><td>墨囊+荧石粉+<a href="#dragon_egg">龙蛋</a></td><td><span class="mcui"><span>
 <span class="mcui_row"><span class="ink_sac" title="墨囊">
@@ -1547,7 +1547,7 @@
 <img style="height:220px" src="items/screenshots/red_force_of_fire.png" /> <img style="height:220px" src="items/screenshots/blue_force_of_sky.png" />
 
 <h3 id="magnet">磁铁 (Magnet)</h3>
-<p>自动将附近物品吸引过来。右键依次切换范围为0/8/16米。若放置放物品展示框，可吸引附近16米的物品到所在处。</p>
+<p>自动将附近物品吸引过来。主手持有右键依次切换范围为0/8/16米。若放置放物品展示框，可吸引附近16米的物品到所在处。</p>
 <p class="small">切换会导致改名或移除光泽的磁铁恢复为默认名称和光泽。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>磁铁</th><td><a href="#enchanted_iron">附魔铁锭</a>+红石</td>
@@ -1566,7 +1566,7 @@
 </tbody></table>
 
 <h3 id="time_conditioner">时间调节器 (Time Conditioner)</h3>
-<p>右键依次切换模式为作物生长速度加倍/作物生长速度恢复/停止日夜循环/开启日夜循环。</p>
+<p>主手持有右键依次切换模式为作物生长速度加倍/作物生长速度恢复/停止日夜循环/开启日夜循环。</p>
 <p class="small">即便是多个时间调节器也无法同时实现作物生长速度加倍和停止日夜循环。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>时间调节器</th><td><a href="#enchanted_gold">附魔金锭</a>+红石</td>
@@ -1585,7 +1585,7 @@
 </tbody></table>
 
 <h3 id="time_checker">报时器 (Time Checker)</h3>
-<p>放置于物品展示框后可报时。右键消耗4点经验将时间增加1200刻(60秒)。</p>
+<p>放置于物品展示框后可报时。主手持有右键消耗4点经验将时间增加1200刻(60秒)。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>报时器</th><td><a href="#enchanted_diamond">附魔钻石</a>+红石</td>
 <td><span class="mcui"><span><span class="mcui_row"><span class="empty">
@@ -1603,7 +1603,7 @@
 </tbody></table>
 
 <h3 id="origin_of_the_world">世界之源 (Origin of the World)</h3>
-<p>右键消耗20点经验返回世界原点。<em>Slonhon Ral!</em></p>
+<p>主手持有右键消耗20点经验返回世界原点。<em>Slonhon Ral!</em></p>
 <p class="small">世界原点是指X与Z为(0,0)的附近。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>世界之源</th><td><a href="#wing_of_sky">天空之翼</a>+<a href="#limb_of_ridge">山脉之肢</a>+红石<td><span class="mcui"><span>
@@ -1622,7 +1622,7 @@
 </tbody></table>
 
 <h3 id="compressor">压缩器 (Comperessor)</h3>
-<p>手持压缩器右键可将地面的64个物品压缩，重新扔出压缩后的物品可复原。最高可进行八重压缩，相当于1格可存储至多18014398509481984个物品。</p>
+<p>主手持有压缩器右键可将地面的64个物品压缩，重新扔出压缩后的物品可复原。最高可进行八重压缩，相当于1格可存储至多18014398509481984个物品。</p>
 <p class="small">放置压缩后的方块将会导致其退化为普通方块。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>压缩器</th><td>附魔之瓶+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+活塞+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#silicon_plate">硅板</a></td>
@@ -1660,7 +1660,7 @@
 </tbody></table>
 
 <h3 id="coordinate_recorder">坐标记录仪 (Coordinate Recorder)</h3>
-<p>在A处右击记录玩家坐标，然后Shift右击B处，即可在B处建立到A的单向传送门。</p>
+<p>在A处主手持有右击记录玩家坐标，然后主手持有Shift右击B处，即可在B处建立到A的单向传送门。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>坐标记录仪</th><td>附魔之瓶+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+纸+<a href="#enchanted_iron">附魔铁锭</a>+<a href="#silicon_plate">硅板</a></td>
 <td><span class="mcui"><span><span class="mcui_row"><span class="experience_bottle" title="附魔之瓶">
@@ -1768,7 +1768,7 @@
 </tbody></table>
 
 <h3 id="empty_bookshelf">空书架 (Empty Bookshelf)</h3>
-<p>拥有三格槽位，外观会随着内部物品数量而变化。</p>
+<p>主手持有右键放置。拥有三格槽位，外观会随着内部物品数量而变化。</p>
 <p class="small">强行放入背景的物品会消失。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>空书架</th><td>橡木木板+箱子</td>
@@ -1795,7 +1795,7 @@
 <li><strong id="golem_warrior">傀儡战士 (Golem Warrior)</strong>：对接触的非玩家生物造成伤害。</li>
 <li><strong id="golem_herder">傀儡牧民 (Golem Herder)</strong>：繁殖接触的动物。</li>
 </ul>
-<p>这些傀儡放置时默认向东方移动，接触控制方块后会转向。</p>
+<p>主手持有这些傀儡右键放置，放置后默认向东方移动，接触控制方块后会转向。</p>
 
 <table><thead>
 <tr><th>方向</th><th>控制方块</th></tr>
@@ -2361,7 +2361,7 @@
 <span class="colorful_items temperancer_closed" title="节制器">
 </span></span><span class="mcui_icons2"><span class="mcui_crafting_machine" title="使用合成器合成"></span></span></span></td></tr>
 </tbody></table>
-<p>右键可开启/关闭。</p>
+<p>主手持有右键可开启/关闭。</p>
 
 <h3 id="wand_of_the_darkness">黑暗之杖 (Wand of the Darkness)</h3>
 <p>将烈焰棒重命名为任意名称，然后扔入岩浆即可得到黑暗魔杖，名称越中二法力越强。</p>
@@ -2457,7 +2457,7 @@
 <p>剑、斧可附加属性：
 <ul>
 <li>攻击速度 1.6+0.4~2.0</li>
-攻击伤害 7+1~7 (覆盖锋利效果)
+<li>攻击伤害 7+1~7 (覆盖锋利效果)</li>
 <li>速度 0.1+0.005~0.015</li>
 <li>幸运 +0.5~2</li>
 </ul></p>
