修复了仪式中属性附加比例错误 修复了副手持有工具的错误 修复了破坏机器不能正确掉落的错误 修复了空书架的错误

--- a/index.html
+++ b/index.html
@@ -1795,7 +1795,7 @@
 <li><strong id="golem_warrior">傀儡战士 (Golem Warrior)</strong>：对接触的非玩家生物造成伤害。</li>
 <li><strong id="golem_herder">傀儡牧民 (Golem Herder)</strong>：繁殖接触的动物。</li>
 </ul>
-<p>主手持有这些傀儡右键放置，放置后默认向东方移动，接触控制方块后会转向。</p>
+<p>主手持有这些傀儡右键放置，放置后默认向东方移动，接触控制方块后会转向。和平模式下傀儡会直接消失。</p>
 
 <table><thead>
 <tr><th>方向</th><th>控制方块</th></tr>
