魔杖和年长者之教诲材质变更 玩家在新加载区块32米内即可加载新结构 二级作物的种子掉落恢复为0-2个 修改台词影响范围为8 解决了世界之源没有方块时无法传送的问题

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<li><a href="#block_sky_domain">空岛</a></li>
 	<li><a href="#advancements">进度</a></li>
 	<li><a href="#config">配置</a></li>	
-	<li><a href="#changlog">日志</a></li>
+	<li><a href="#changelog">日志</a></li>
 </ul>
 </nav>
 <div class="banner" style="margin-top:44px">
@@ -77,7 +77,7 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 18w32a至1.13.1-pre2</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d22.zip">craftingpp-1.8-m08d22</a> | <a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d22.zip">备用链接</a></li></td></tr>
+<tr><td>Minecraft Java版 18w32a至1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d24.zip">craftingpp-1.8-m08d24</a> | <a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d24.zip">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.12</td><td>
 <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td></tr>
 <tr><td>Minecraft Java版 1.12 pre</td><td>
@@ -2456,7 +2456,7 @@
 </span><span class="experience_bottle" title="附魔之瓶"><span class="stacksize">20</span>
 </span><span class="gold_ingot" title="金锭">
 </span></span></p>
-<p>剑、斧可附加属性：
+<p>剑(木制除外)、斧(木制除外)、三叉戟可附加属性：
 <ul>
 <li>攻击速度在原有武器基础上 +0.4~2.0 (=显示的速度+空手速度4.0)</li>
 <li>攻击伤害在原有武器基础上 +2~8 (覆盖锋利效果)</li>
@@ -3918,7 +3918,7 @@ scoreboard players set #rituals_time cppValue 1200
 </pre>
 
 <!------------------------------------------------------------------------------------------------>
-<h2 id="changlog">更新日志</h2>
+<h2 id="changelog">更新日志</h2>
 <table id="update">
 <thead><tr>
 	<th width="150px">模组版本与名称</th>
