--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 18w32a至1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d24.zip">craftingpp-1.8-m08d24</a> | <a href="home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d24.zip">备用链接</a></li></td></tr>
+<tr><td>Minecraft Java版 18w32a至1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d24.zip">craftingpp-1.8-m08d24</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d24.zip
+">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.12</td><td>
 <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td></tr>
 <tr><td>Minecraft Java版 1.12 pre</td><td>
