修复黑暗仪式生命消耗的选择错误 林业员的收购木头数量调整为28-32 连锁挖矿范围修改为10米 修复连锁药水的错误 修复称号的错误 修复附魔室宝箱空白附魔书的问题 微调结构生成代码 黑暗仪式不再区分刷怪箱类别，改用8个黑暗碎片 连锁挖掘不再支持变种石头 刷怪蛋改用龙蛋而不是鸡蛋

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <h3 id="acknowledge">👷 制作者名单</h3>
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu 天狼星black 折君 MC先生</p>
-<p><span style="font-weight:bold;">指令参考</span>：<a href="http://www.mcbbs.net/?1963599">pineapple_</a> <a href="http://www.mcbbs.net/?160123">贰逼</a> the Eternal Celestial Star <a href="https://github.com/pca006132">pca</a> <a href="http://www.mcbbs.net/?720449">玄素</a> <a href="http://www.mcbbs.net/?582040">chyx</a> <a href="https://github.com/ustc-zzzz">zzzz_ustc</a> <a href="http://www.mcbbs.net/?1073223">乙烯_中国</a> <a href="https://github.com/switefaster">switefaster</a> 折君 <a href="http://www.mcbbs.net/?725858">⊙v⊙</a></p>
+<p><span style="font-weight:bold;">指令参考</span>：<a href="http://www.mcbbs.net/?1963599">pineapple_</a> <a href="http://www.mcbbs.net/?160123">贰逼</a> the Eternal Celestial Star <a href="https://github.com/pca006132">pca</a> <a href="http://www.mcbbs.net/?720449">玄素</a> <a href="http://www.mcbbs.net/?582040">chyx</a> <a href="https://github.com/ustc-zzzz">zzzz_ustc</a> <a href="http://www.mcbbs.net/?1073223">乙烯_中国</a> <a href="https://github.com/switefaster">switefaster</a> 折君 <a href="http://www.mcbbs.net/?725858">⊙v⊙</a> Herobrinexia</p>
 <p><span style="font-weight:bold;">灵感参考</span>：<a href="http://teamcofh.com/">热力膨胀</a> <a href="https://botaniamod.net/">植物魔法</a> <a href="http://www.abyssalcraft.com/">深渊国度</a> <a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a> 盐</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">mcbbs中文论坛</a> <a href="https://www.mcmod.cn/">MCMOD百科</a> <a href="http://www.mcbbs.net/group-546-1.html">CBL</a>(Command Block Logic) <a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>(The Command's Power) <a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>(Cherry Blossom V) <a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>(Magic Amateur Group)</p>
 <p><span style="font-weight:bold;">经费支持</span>：落天望月 <a href="https://github.com/switefaster">switefaster</a> <a href="http://www.mcbbs.net/?582040">chyx</a></p>
@@ -2216,7 +2216,7 @@
 <tr><td><strong>菖蒲草 (Calamus)</strong></td><td>彼岸花+风信子</td><td>紫色染料</td></tr>
 <tr><td><strong>滇百合 (Wild Lilium)</strong></td><td>香蒲草+金盏花</td><td>黄绿色染料</td></tr>
 <tr><td><strong>紫荆花 (Bauhinia)</strong></td><td>木槿花+菖蒲草</td><td>品红色染料</td></tr>
-<tr><td><strong>蓬蓬草 (Fluffy Grass)</strong></td><td>白车轴+香蒲草</td><td>羽毛</td><td rowspan="10">1 种子</td></tr>
+<tr><td><strong>蓬蓬草 (Fluffy Grass)</strong></td><td>白车轴+香蒲草</td><td>羽毛</td><td rowspan="10">0~2 种子</td></tr>
 <tr><td><strong>大丁草 (Gerbera)</strong></td><td>黑荆棘+香蒲草</td><td>火药</td></tr>
 <tr><td><strong>芦苇草 (Esparto)</strong></td><td>白车轴+风信子</td><td>线</td></tr>
 <tr><td><strong>亮连翘 (Glow Forsythia)</strong></td><td>香蒲草+风信子</td><td>荧石粉</td></tr>
@@ -2494,20 +2494,20 @@
 <li>魔杖等级：黑暗魔杖</li>
 <li>附加物：<a href="#shard_of_the_darkness">破损刷怪箱</a></li>
 <li>时长：60秒</li>
-<li>消耗材料：<a href="#shard_of_the_darkness">黑暗碎片</a>+刷怪蛋+稀有掉落物/下界之星</li>
+<li>消耗材料：<a href="#shard_of_the_darkness">黑暗碎片</a>+稀有掉落物/下界之星</li>
 <li>消耗施法者生命：12点</li>
 </ul>
 <span class="mcui_row"><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
-</span><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
 </span><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
-</span></span><span class="mcui_row"><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
-</span><span class="colorful_items wing_of_sky" title="稀有物">
-</span><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
+</span><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
 </span></span><span class="mcui_row"><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
-</span><span class="blaze_spawn_egg" title="烈焰人刷怪蛋">
+</span><span class="colorful_items wing_of_sky" title="稀有物">
+</span><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
+</span></span><span class="mcui_row"><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
+</span><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
 </span><span class="colorful_items shard_of_the_darkness" title="黑暗碎片">
 </span></span>
-<p>仪式完成后，破损刷怪箱将会变成刷怪箱。仅支持僵尸、骷髅、蜘蛛、洞穴蜘蛛、爬行者、烈焰人。</p>
+<p>仪式完成后，破损刷怪箱将会变成刷怪箱。</p>
 
 
 <!------------------------------------------------------------------------------------------------->
