--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th></tr></thead>
 <tbody>
-<tr><td>Minecraft Java版 18w32a至1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d24.zip">craftingpp-1.8-m08d24</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d24.zip
+<tr><td>Minecraft Java版 18w32a至1.13.1</td><td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8-m08d27.zip">craftingpp-1.8-m08d27</a> | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8-m08d27.zip
 ">备用链接</a></li></td></tr>
 <tr><td>Minecraft Java版 1.12</td><td>
 <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td></tr>
@@ -3089,20 +3089,20 @@
 哞菇刷怪蛋<br />
 蝙蝠刷怪蛋<br />
 鱿鱼刷怪蛋<br />
-北极熊刷怪蛋</th><td>任意羊毛+鸡蛋<br />
-皮革+鸡蛋<br />
-生猪排+鸡蛋<br />
-羽毛+鸡蛋<br />
-兔子皮+鸡蛋<br />
-红色蘑菇+皮革+鸡蛋<br />
-木炭+鸡蛋<br />
-墨囊+鸡蛋<br />
-冰+鸡蛋</td><td>
+北极熊刷怪蛋</th><td>任意羊毛+龙蛋<br />
+皮革+龙蛋<br />
+生猪排+龙蛋<br />
+羽毛+龙蛋<br />
+兔子皮+龙蛋<br />
+红色蘑菇+皮革+龙蛋<br />
+木炭+龙蛋<br />
+墨囊+龙蛋<br />
+冰+龙蛋</td><td>
 <span class="mcui"><span><span class="mcui_row"><span class="white_wool" title="羊毛">
 </span><span class="white_wool" title="羊毛">
 </span><span class="white_wool" title="羊毛">
 </span></span><span class="mcui_row"><span class="white_wool" title="羊毛">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="white_wool" title="羊毛">
 </span></span><span class="mcui_row"><span class="white_wool" title="羊毛">
 </span><span class="white_wool" title="羊毛">
@@ -3115,7 +3115,7 @@
 </span><span class="leather" title="皮革">
 </span><span class="red_mushroom" title="红色蘑菇">
 </span></span><span class="mcui_row"><span class="leather" title="皮革">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="leather" title="皮革">
 </span></span><span class="mcui_row"><span class="red_mushroom" title="红色蘑菇">
 </span><span class="leather" title="皮革">
@@ -3126,14 +3126,14 @@
 
 <tr><th>村民刷怪蛋<br />
 卫道士刷怪蛋<br />
-唤魔者刷怪蛋</th><td>绿宝石+鸡蛋<br />
-铁块+鸡蛋<br />
-金块+鸡蛋</td><td>
+唤魔者刷怪蛋</th><td>绿宝石+龙蛋<br />
+铁块+龙蛋<br />
+金块+龙蛋</td><td>
 <span class="mcui"><span><span class="mcui_row"><span class="emerald" title="绿宝石">
 </span><span class="emerald" title="绿宝石">
 </span><span class="emerald" title="绿宝石">
 </span></span><span class="mcui_row"><span class="emerald" title="绿宝石">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="emerald" title="绿宝石">
 </span></span><span class="mcui_row"><span class="emerald" title="绿宝石">
 </span><span class="emerald" title="绿宝石">
@@ -3150,20 +3150,20 @@
 末影人刷怪蛋<br />
 史莱姆刷怪蛋<br />
 洞穴蜘蛛刷怪蛋<br />
-蠹虫刷怪蛋</th><td>火药+鸡蛋<br />
-腐肉+鸡蛋<br />
-骨头+鸡蛋<br />
-线+鸡蛋<br />
-红石粉+鸡蛋<br />
-末影珍珠+鸡蛋<br />
-粘液球+鸡蛋<br />
-蜘蛛眼+鸡蛋<br />
-任意石砖+鸡蛋<br /></td><td>
+蠹虫刷怪蛋</th><td>火药+龙蛋<br />
+腐肉+龙蛋<br />
+骨头+龙蛋<br />
+线+龙蛋<br />
+红石粉+龙蛋<br />
+末影珍珠+龙蛋<br />
+粘液球+龙蛋<br />
+蜘蛛眼+龙蛋<br />
+任意石砖+龙蛋<br /></td><td>
 <span class="mcui"><span><span class="mcui_row"><span class="gunpowder" title="火药">
 </span><span class="gunpowder" title="火药">
 </span><span class="gunpowder" title="火药">
 </span></span><span class="mcui_row"><span class="gunpowder" title="火药">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="gunpowder" title="火药">
 </span></span><span class="mcui_row"><span class="gunpowder" title="火药">
 </span><span class="gunpowder" title="火药">
@@ -3176,7 +3176,7 @@
 </span><span class="stone_bricks" title="石砖">
 </span><span class="stone_bricks" title="石砖">
 </span></span><span class="mcui_row"><span class="stone_bricks" title="石砖">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="stone_bricks" title="石砖">
 </span></span><span class="mcui_row"><span class="stone_bricks" title="石砖">
 </span><span class="stone_bricks" title="石砖">
@@ -3194,21 +3194,21 @@
 烈焰人刷怪蛋<br />
 末影螨刷怪蛋<br />
 潜影贝刷怪蛋<br />
-幻翼刷怪蛋</th><td>水桶+鸡蛋<br />
-任意生鱼+鸡蛋<br />
-金粒+鸡蛋<br />
-恶魂之泪+鸡蛋<br />
-岩浆膏+鸡蛋<br />
-煤炭块+鸡蛋<br />
-烈焰粉+鸡蛋<br />
-末地石+鸡蛋<br />
-紫颂果+鸡蛋<br />
-幻翼膜+鸡蛋</td><td>
+幻翼刷怪蛋</th><td>水桶+龙蛋<br />
+任意生鱼+龙蛋<br />
+金粒+龙蛋<br />
+恶魂之泪+龙蛋<br />
+岩浆膏+龙蛋<br />
+煤炭块+龙蛋<br />
+烈焰粉+龙蛋<br />
+末地石+龙蛋<br />
+紫颂果+龙蛋<br />
+幻翼膜+龙蛋</td><td>
 <span class="mcui"><span><span class="mcui_row"><span class="water_bucket" title="水桶">
 </span><span class="water_bucket" title="水桶">
 </span><span class="water_bucket" title="水桶">
 </span></span><span class="mcui_row"><span class="water_bucket" title="水桶">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="water_bucket" title="水桶">
 </span></span><span class="mcui_row"><span class="water_bucket" title="水桶">
 </span><span class="water_bucket" title="水桶">
@@ -3221,7 +3221,7 @@
 </span><span class="chorus_fruit" title="紫颂果">
 </span><span class="chorus_fruit" title="紫颂果">
 </span></span><span class="mcui_row"><span class="chorus_fruit" title="紫颂果">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="chorus_fruit" title="紫颂果">
 </span></span><span class="mcui_row"><span class="chorus_fruit" title="紫颂果">
 </span><span class="chorus_fruit" title="紫颂果">
@@ -3236,18 +3236,18 @@
 驴刷怪蛋<br />
 羊驼刷怪蛋<br />
 鹦鹉刷怪蛋<br />
-海龟刷怪蛋</th><td>骨头+<a href="#heads">骷髅头颅</a>+鸡蛋<br />
-任意生鱼+<a href="#heads">骷髅头颅</a>+鸡蛋<br />
-皮革+<a href="#heads">骷髅头颅</a>+鸡蛋<br />
-箱子+<a href="#heads">骷髅头颅</a>+鸡蛋<br />
-任意地毯+<a href="#heads">骷髅头颅</a>+鸡蛋<br />
-羽毛+<a href="#heads">骷髅头颅</a>+鸡蛋<br />
-海草+<a href="#heads">骷髅头颅</a>+鸡蛋</td><td>
+海龟刷怪蛋</th><td>骨头+<a href="#heads">骷髅头颅</a>+龙蛋<br />
+任意生鱼+<a href="#heads">骷髅头颅</a>+龙蛋<br />
+皮革+<a href="#heads">骷髅头颅</a>+龙蛋<br />
+箱子+<a href="#heads">骷髅头颅</a>+龙蛋<br />
+任意地毯+<a href="#heads">骷髅头颅</a>+龙蛋<br />
+羽毛+<a href="#heads">骷髅头颅</a>+龙蛋<br />
+海草+<a href="#heads">骷髅头颅</a>+龙蛋</td><td>
 <span class="mcui"><span><span class="mcui_row"><span class="bone" title="骨头">
 </span><span class="skeleton_skull" title="骷髅头颅">
 </span><span class="bone" title="骨头">
 </span></span><span class="mcui_row"><span class="bone" title="骨头">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="bone" title="骨头">
 </span></span><span class="mcui_row"><span class="bone" title="骨头">
 </span><span class="bone" title="骨头">
@@ -3260,7 +3260,7 @@
 </span><span class="skeleton_skull" title="骷髅头颅">
 </span><span class="feather" title="羽毛">
 </span></span><span class="mcui_row"><span class="feather" title="羽毛">
-</span><span class="egg" title="鸡蛋">
+</span><span class="dragon_egg" title="龙蛋">
 </span><span class="feather" title="羽毛">
 </span></span><span class="mcui_row"><span class="feather" title="羽毛">
 </span><span class="feather" title="羽毛">
