修复黑暗仪式生命消耗的选择错误 林业员的收购木头数量调整为28-32 连锁挖矿范围修改为10米 修复连锁药水的错误 修复称号的错误 修复附魔室宝箱空白附魔书的问题 微调结构生成代码 黑暗仪式不再区分刷怪箱类别，改用8个黑暗碎片 连锁挖掘不再支持变种石头 刷怪蛋改用龙蛋而不是鸡蛋 连锁效果可使用节制器关闭

--- a/index.html
+++ b/index.html
@@ -2154,7 +2154,7 @@
 
 <h3 id="potion_of_chain">连环药水 (Potion of Chain)</h3>
 <p>连环药水由<a href="#all_in_one_machine">多功能一体机</a>常温低压下酿造<a href="#enchanted_iron">附魔铁锭</a>+粗制的药水得到。</p>
-<p>饮用后获得8分钟的<span id="#chain_effect">连锁</span>效果：不显示状态效果图标，显示赭色粒子效果，时间显示在快捷栏上方。玩家使用斧可一次性破坏相连的树、瓜、蘑菇方块、成熟的农作物，使用镐可一次性破坏15米内相连的矿石、黑曜石、变种石头，使用锹可一次性破坏10米内相连的沙砾、粘土、沙子、灵魂沙。该效果受精准采集和时运影响，每次使用仅消耗1点耐久值。</p>
+<p>饮用后获得8分钟的<span id="#chain_effect">连锁</span>效果：不显示状态效果图标，显示赭色粒子效果，时间显示在快捷栏上方。玩家使用斧可一次性破坏相连的树、瓜、蘑菇方块、成熟的农作物，使用镐可一次性破坏15米内相连的矿石、黑曜石、变种石头，使用锹可一次性破坏10米内相连的沙砾、粘土、沙子、灵魂沙。该效果受精准采集和时运影响，每次使用仅消耗1点耐久值。可使用节制器关闭。</p>
 
 <h3 id="potion_of_regeneration">再生药水 (Potion of Regeneration)</h3>
 <p>再生药水由<a href="#all_in_one_machine">多功能一体机</a>常温低压下酿造<a href="#ghast_tear">恶魂之泪</a>+粗制的药水得到。</p>
