--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <p><span style="font-weight:bold;">指令参考</span>：<a href="http://www.mcbbs.net/?1963599">pineapple_</a> <a href="http://www.mcbbs.net/?160123">贰逼</a> the Eternal Celestial Star <a href="https://github.com/pca006132">pca</a> <a href="http://www.mcbbs.net/?720449">玄素</a> <a href="http://www.mcbbs.net/?582040">chyx</a> <a href="https://github.com/ustc-zzzz">zzzz_ustc</a> <a href="http://www.mcbbs.net/?1073223">乙烯_中国</a> <a href="https://github.com/switefaster">switefaster</a> 折君 <a href="http://www.mcbbs.net/?725858">⊙v⊙</a> Herobrinexia</p>
 <p><span style="font-weight:bold;">灵感参考</span>：<a href="http://teamcofh.com/">热力膨胀</a> <a href="https://botaniamod.net/">植物魔法</a> <a href="http://www.abyssalcraft.com/">深渊国度</a> <a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a> 盐</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">mcbbs中文论坛</a> <a href="https://www.mcmod.cn/">MCMOD百科</a> <a href="http://www.mcbbs.net/group-546-1.html">CBL</a>(Command Block Logic) <a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>(The Command's Power) <a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>(Cherry Blossom V) <a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>(Magic Amateur Group)</p>
-<p><span style="font-weight:bold;">经费支持</span>：落天望月 <a href="https://github.com/switefaster">switefaster</a> <a href="http://www.mcbbs.net/?582040">chyx</a></p>
+<p><span style="font-weight:bold;">经费支持</span>：落天望月 <a href="https://github.com/switefaster">switefaster</a> <a href="http://www.mcbbs.net/?582040">chyx</a> <a href="https://github.com/ustc-zzzz">ustc_zzzz</a></p>
 <p style="color:red;">感谢以上所有玩家，特别感谢对我们给予经费支持的玩家！</p>
 
 <h3 id="tips">🔧 技术性</h3>
